--- a/.gitignore
+++ b/.gitignore
@@ -1,206 +1,140 @@
-### Windows template
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-$RECYCLE.BIN/
-*.cab
-*.msi
-*.msm
-*.msp
-*.lnk
 
-
-### Example user template
-out
-gen
-.idea
-
-
-### Scala/SBT template
-*.class
-*.log
-
-.cache
-.history
-.lib/
-dist/*
+# Directories #
+/build/
+/bin/
 target/
-lib_managed/
-src_managed/
-project/boot/
-project/plugins/project/
-
-.scala_dependencies
-.worksheet
-
-
-### Linux template
-*~
-.fuse_hidden*
-.directory
-.Trash-*
-
-
-### Eclipse template
+.idea
+classes/
+META-INF/
+  
+# OS Files #
+.DS_Store
+  
+*.class
+  
+# Package Files #
+*.jar
+*.war
+*.ear
+*.db
+  
+######################
+# Windows
+######################
+  
+# Windows image file caches
+Thumbs.db 
+  
+# Folder config file
+Desktop.ini
+  
+######################
+# OSX
+######################
+  
+.DS_Store
+.svn
+  
+# Thumbnails
+._*
+  
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+  
+  
+######################
+# Eclipse
+######################
+  
+*.pydevproject
+.project
 .metadata
-bin/
-tmp/
+bin/**
+tmp/**
+tmp/**/*
 *.tmp
 *.bak
 *.swp
 *~.nib
-local.properties
+.classpath
 .settings/
 .loadpath
-.recommenders
-
-.project
+/src/main/resources/rebel.xml
+# External tool builders
 .externalToolBuilders/
+  
+# Locally stored "Eclipse launch configurations"
 *.launch
-*.pydevproject
+  
+# CDT-specific
 .cproject
-.classpath
-.factorypath
+  
+# PDT-specific
 .buildpath
-.target
-.tern-project
-.texlipse
-.springBeans
-.recommenders/
 
+# Created by https://www.gitignore.io/api/intellij
 
-### OSX template
-*.DS_Store
-.AppleDouble
-.LSOverride
-Icon
-._*
+### Intellij ###
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
+# User-specific stuff:
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/dictionaries
 
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# Sensitive or high-churn files:
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.xml
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
 
+# Gradle:
+.idea/**/gradle.xml
+.idea/**/libraries
 
-### SublimeText template
-*.tmlanguage.cache
-*.tmPreferences.cache
-*.stTheme.cache
+# CMake
+cmake-build-debug/
 
-*.sublime-workspace
-# *.sublime-project
-sftp-config.json
+# Mongo Explorer plugin:
+.idea/**/mongoSettings.xml
 
-Package Control.last-run
-Package Control.ca-list
-Package Control.ca-bundle
-Package Control.system-ca-bundle
-Package Control.cache/
-Package Control.ca-certs/
-bh_unicode_properties.cache
-
-GitHub.sublime-settings
-
-
-### Maven template
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-
-
-### Java template
-
-.mtj.tmp/
-*.jar
-*.war
-*.ear
-hs_err_pid*
-
-
-### Vim template
-[._]*.s[a-w][a-z]
-[._]s[a-w][a-z]
-
-Session.vim
-.netrwhist
-tags
-
-
-### NetBeans template
-nbproject/private/
-nbbuild/
-dist/
-nbdist/
-nbactions.xml
-.nb-gradle/
-
-
-### JetBrains template
-.idea/tasks.xml
-.idea/jsLibraryMappings.xml
-
-.idea/dataSources.ids
-.idea/dataSources.xml
-.idea/dataSources.local.xml
-.idea/sqlDataSources.xml
-.idea/dynamic.xml
-
-.idea/mongoSettings.xml
+## File-based project format:
 *.iws
+
+## Plugin-specific files:
+
+# IntelliJ
 /out/
+
+# mpeltonen/sbt-idea plugin
 .idea_modules/
+
+# JIRA plugin
 atlassian-ide-plugin.xml
 
+# Cursive Clojure plugin
+.idea/replstate.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
+### Intellij Patch ###
+# Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
-### Node template
-logs
-npm-debug.log*
+# *.iml
+# modules.xml
+# .idea/misc.xml
+# *.ipr
 
-pids
-*.pid
-*.seed
+# Sonarlint plugin
+.idea/sonarlint
 
-lib-cov
-coverage
-.nyc_output
-
-.grunt
-.lock-wscript
-
-build/Release
-node_modules
-jspm_packages
-
-.npm
-.node_repl_history
-
-### Gradle template
-build/
-
-.gradle
-.gradletasknamecache
-gradle-app.setting
-!gradle-wrapper.jar
-
-### This Project
-/src/main/resources/application.yml
-/src/main/generated/
+# End of https://www.gitignore.io/api/intellij
